# wordle_stats

./: MANIFEST.in  README.md  setup.cfg  wordle_stats.py
src/wordlepoints/: wordle_stats.py
src/wordlepoints.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
