[metadata]
name = wordlepoints
version = 0.0.9
author = Tom Henry
author_email = thenry3@nd.edu
description = Wordle Stats is a score generator that takes challenging your friends in Wordle to the next level. It provides scores for how good each guess was as well as score boosts for how many rounds it took you to solve the puzzle!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkhenry/wordle_stats
project_urls = 
    Bug Tracker = https://github.com/tkhenry/wordle_stats/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.txt